tests/snapshots/lex_error_unexpected.expected
-- SYNTAX ERROR --------------------------------------------

test.gn:1:9

I found an unexpected character: '@'

1 | let x = @invalid
            ^
